# django-emqx

./: .gitignore  README.md  pyproject.toml  pytest.ini
django_emqx/: __init__.py  admin.py  apps.py  conf.py  mixins.py  models.py  mqtt.py  serializers.py  signals.py  urls.py  utils.py  views.py
django_emqx/management/commands/: generate_emqx_config.py
django_emqx/migrations/: 0001_initial.py
django_emqx/templates/emqx/: emqx.conf.j2
tests/: settings.py  test_admin.py  test_mixins.py  test_models.py  test_mqtt.py  test_signals.py  test_utils.py  test_views.py  urls.py
